fix(MovieCard): fixes image alignment

--- a/src/Movie/MovieCard/MovieCard.scss
+++ b/src/Movie/MovieCard/MovieCard.scss
@@ -10,6 +10,6 @@
         position: absolute;
         width: 100%;
         height: auto;
-        margin-top: -50%;
+        margin-top: -25%;
     }
 }
